--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 		<java.version>1.8</java.version>
         <lombok.version>1.16.16</lombok.version>
 		<spring-statemachine.version>2.0.0.BUILD-SNAPSHOT</spring-statemachine.version>
+		<spring-shell.version>1.2.1.BUILD-SNAPSHOT</spring-shell.version>
 	</properties>
 
 	<dependencies>
@@ -30,6 +31,11 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.shell</groupId>
+			<artifactId>spring-shell</artifactId>
+			<version>1.2.0.RC1</version>
 		</dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
