--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 		<java.version>1.8</java.version>
         <lombok.version>1.16.16</lombok.version>
         <spring-mybatis.version>2.0.0-SNAPSHOT</spring-mybatis.version>
-
+		<powermock.version>1.7.1</powermock.version>
 	</properties>
 
 	<dependencies>
@@ -59,7 +59,20 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-module-junit4</artifactId>
+			<version>${powermock.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-api-mockito2</artifactId>
+			<version>${powermock.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+    </dependencies>
 
 	<repositories>
 		<repository>
