--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,9 @@
+server.port=8080
+management.endpoints.web.expose=*
 
-management.security.enabled=false
+management.endpoint.shutdown.enabled=true
+management.endpoint.health.show-details=true
+info.app.encoding=@project.build.sourceEncoding@
+info.app.java.source=@java.version@
+info.app.java.target=@java.version@
+management.info.git.mode=full
