--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,7 @@ mybatis-plus.global-config.id-type=3
 mybatis-plus.global-config.logic-not-delete-value=0
 mybatis-plus.global-config.sql-injector=com.baomidou.mybatisplus.mapper.LogicSqlInjector
 mybatis-plus.global-config.logic-delete-value=1
+
+
+spring.datasource.druid.filter.slf4j.enabled=true
+spring.datasource.druid.filter.slf4j.data-source-log-enabled=true
