--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,6 @@
 	<properties>
 		<java.version>1.8</java.version>
         <lombok.version>1.16.16</lombok.version>
-
 	</properties>
 
 	<dependencies>
@@ -27,6 +26,16 @@
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
         </dependency>
+		<dependency>
+			<groupId>com.netflix.hystrix</groupId>
+			<artifactId>hystrix-core</artifactId>
+			<version>1.5.12</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+		</dependency>
 	</dependencies>
 
 	<repositories>
